product - article relation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,6 @@ spring.datasource.username=warehouse_user
 spring.datasource.password=warehouse_user_password
 
 
-# spring.jpa.show-sql=true
+# Log JPA queries
+# Comment this in production
+spring.jpa.show-sql=true
