add stock calculation per product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.datasource.password=warehouse_user_password
 
 # Log JPA queries
 # Comment this in production
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
