--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ build/
 .gradle/
 .idea/
 target/
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
