--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
       - db
     ports:
       - 8080:8080
-    command: sh -c '/wait-for.sh db:5432 -- java -jar /app/build/app.jar'
+    command: sh -c '/wait-for.sh db:5432 -- java -jar /app/build/distributions/app.jar'
     environment:
       "spring.main.banner-mode": "off"
       "logging.level.org.springframework": "ERROR"
