--- a/app/src/main/resources/application-docker.properties
+++ b/app/src/main/resources/application-docker.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://db:5432/warehouse_db
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=warehouse_user
 spring.datasource.password=warehouse_user_password
 
