--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,11 +19,13 @@ services:
       dockerfile: Dockerfile
       context: .
     links:
-      - "db:database"
+      - db
     depends_on:
       - db
     ports:
       - 8080:8080
+    environment:
+      SPRING_DATASOURCE_URL: "jdbc:postgresql://db:5432/warehouse_db"
 
 
 
