--- a/app/src/main/resources/application-docker.properties
+++ b/app/src/main/resources/application-docker.properties
@@ -18,3 +18,4 @@ spring.datasource.password=warehouse_user_password
 # spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
