--- a/.github/workflows/application-build.yml
+++ b/.github/workflows/application-build.yml
@@ -20,5 +20,5 @@ jobs:
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 7.3
-          arguments: build
+          arguments: build --no-cache
 
