--- a/.github/workflows/application-test.yml
+++ b/.github/workflows/application-test.yml
@@ -20,5 +20,5 @@ jobs:
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 7.3
-          arguments: test --no-cache
+          arguments: test
 
