--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.springframework=ERROR
+logging.level.org.springframework=DEBUG
 spring.datasource.url=jdbc:postgresql://localhost:5432/warehouse_db
 spring.datasource.platform=postgres
 spring.datasource.username=warehouse_user
