--- a/app/src/main/resources/application-docker.properties
+++ b/app/src/main/resources/application-docker.properties
@@ -9,3 +9,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.tagsSorter=alpha
