--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -6,10 +6,8 @@ logging:
 spring:
   datasource:
     url: "jdbc:postgresql://localhost:5432/warehouse_db"
-    platform: "postgres"
     username: "warehouse_user"
     password: "warehouse_user_password"
-    initialization-mode: "always"
   jpa:
     hibernate:
       ddl-auto: "none"
@@ -22,6 +20,10 @@ spring:
         dialect: "org.hibernate.dialect.PostgreSQLDialect"
   liquibase:
     change-log: "classpath:db/changelog/db.changelog-master.xml"
+  sql:
+    init:
+      platform: "postgres"
+      mode: always
 
 springdoc:
   swagger-ui:
