- add possword reset APIs

--- a/app/src/main/resources/application-docker.yml
+++ b/app/src/main/resources/application-docker.yml
@@ -22,6 +22,17 @@ spring:
         dialect: "org.hibernate.dialect.PostgreSQLDialect"
   liquibase:
     change-log: "classpath:db/changelog/db.changelog-master.xml"
+  mail:
+    host: "smtp.gmail.com"
+    port: 587
+    username: 
+    password: 
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 springdoc:
   swagger-ui:
