--- a/.github/workflows/on_push_and_pr.yml
+++ b/.github/workflows/on_push_and_pr.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           java-version: 17
-          distributions: 'adopt'
+          distribution: 'adopt'
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
