--- a/.github/workflows/on_push_and_pr.yml
+++ b/.github/workflows/on_push_and_pr.yml
@@ -24,5 +24,5 @@ jobs:
         if: success()
         with:
           name: jacoco-report
-          path: build/reports/jacoco/
+          path: app/build/reports/jacoco/
           if-no-files-found: warn
