--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,8 +1,4 @@
-logging:
-  level:
-    org:
-      springframework: "ERROR"
-
+# Default application configuration for dev environment
 spring:
   datasource:
     url: "jdbc:postgresql://localhost:5432/warehouse_db"
@@ -35,6 +31,64 @@ spring:
     init:
       platform: "postgres"
       mode: always
+
+logging:
+  level:
+    org:
+      springframework: "ERROR"
+
+springdoc:
+  swagger-ui:
+    path: "/swagger-ui.html"
+    tagsSorter: "alpha"
+
+---
+# Application configuration for when running in the Google Cloud platform
+spring:
+  config:
+    activate:
+      on-profile: google-cloud
+
+  datasource:
+    url: "jdbc:postgresql://104.155.42.36:5432/warehouse_db"
+    username: "warehouse_user"
+    password: "warehouse_user_password"
+
+  jpa:
+    hibernate:
+      ddl-auto: "none"
+    database-platform: "org.hibernate.dialect.PostgreSQLDialect"
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non_contextual_creation: "true"
+        dialect: "org.hibernate.dialect.PostgreSQLDialect"
+
+  liquibase:
+    change-log: "classpath:db/changelog/db.changelog-master.xml"
+
+  mail:
+    host: "smtp.gmail.com"
+    port: 587
+    username: ""
+    password: ""
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+  sql:
+    init:
+      platform: "postgres"
+      mode: always
+
+logging:
+  level:
+    org:
+      springframework: "ERROR"
 
 springdoc:
   swagger-ui:
