Add env logic to README.md

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 # Default application configuration for dev environment
 spring:
   datasource:
-    url: "jdbc:postgresql://localhost:5432/warehouse_db"
-    username: "warehouse_user"
-    password: "warehouse_user_password"
+    url: "${SPRING_DATASOURCE_URL}"
+    username: "${SPRING_DATASOURCE_USERNAME}"
+    password: "${SPRING_DATASOURCE_PASSWORD}"
   jpa:
     hibernate:
       ddl-auto: "none"
